--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
+        "symfony/webpack-encore-bundle": "*",
         "symfony/webpack-encore-pack": "*",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
