--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,10 +4,7 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    app_user_provider:
-      entity:
-        class: App\Entity\User
-        property: email
+    users_in_memory: { memory: null }
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
