--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,14 +4,21 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    users_in_memory: { memory: null }
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     main:
       lazy: true
-      provider: users_in_memory
+      provider: app_user_provider
+      custom_authenticator: App\Security\LoginAuthenticator
+      logout:
+        path: app_logout
+        target: app_home
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
