--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "symfony/web-link": "6.2.*",
         "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "6.2.*",
+        "symfonycasts/reset-password-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
